--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles2.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
@@ -36,6 +36,6 @@
 
 
 
-    <script src="index2.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
